Updated API specs for Runner & Dispatcher
